--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-error: var(--error);
 }
 
 :root {
@@ -78,19 +79,19 @@
 
 .dark {
   --background: #0b090a;
-  --foreground: #fafafa;
+  --foreground: #f6f6f5; /* gray50 */
   --card: #18181b;
-  --card-foreground: #fafafa;
+  --card-foreground: #f6f6f5; /* gray50 */
   --popover: #18181b;
-  --popover-foreground: #fafafa;
+  --popover-foreground: #f6f6f5; /* gray50 */
   --primary: #178fff; /* primary */
   --primary-foreground: #f6f6f5; /* gray50 */
   --secondary: #27272a;
-  --secondary-foreground: #fafafa;
+  --secondary-foreground: #f6f6f5; /* gray50 */
   --muted: #27272a;
   --muted-foreground: #9f9fa9;
   --accent: #27272a;
-  --accent-foreground: #fafafa;
+  --accent-foreground: #f6f6f5; /* gray50 */
   --destructive: #ff6467;
   --border: #ffffff1a;
   --input: #ffffff26;
@@ -101,13 +102,14 @@
   --chart-4: #ad46ff;
   --chart-5: #ff2056;
   --sidebar: #18181b;
-  --sidebar-foreground: #fafafa;
+  --sidebar-foreground: #f6f6f5; /* gray50 */
   --sidebar-primary: #1447e6;
-  --sidebar-primary-foreground: #fafafa;
+  --sidebar-primary-foreground: #f6f6f5; /* gray50 */
   --sidebar-accent: #27272a;
-  --sidebar-accent-foreground: #fafafa;
+  --sidebar-accent-foreground: #f6f6f5; /* gray50 */
   --sidebar-border: #ffffff1a;
   --sidebar-ring: #71717b;
+  --error: #BF1313;
 }
 
 @layer base {
